--- a/Foresome/Foresome/AfterLogin/NewsFeed/Cell/NewsFeedTableCell.xib
+++ b/Foresome/Foresome/AfterLogin/NewsFeed/Cell/NewsFeedTableCell.xib
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -13,6 +14,9 @@
         </array>
         <array key="Poppins-Regular.ttf">
             <string>Poppins-Regular</string>
+        </array>
+        <array key="Poppins-SemiBold.ttf">
+            <string>Poppins-SemiBold</string>
         </array>
     </customFonts>
     <objects>
@@ -72,12 +76,61 @@
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="1sz-Os-gIb">
-                                <rect key="frame" x="16" y="72" width="309" height="338"/>
+                                <rect key="frame" x="16" y="72" width="309" height="313"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pex" translatesAutoresizingMaskIntoConstraints="NO" id="AZA-Ua-oLZ">
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="top" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="I8C-g1-dfJ">
                                         <rect key="frame" x="0.0" y="0.0" width="309" height="184"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tutorial_screen" translatesAutoresizingMaskIntoConstraints="NO" id="Vcv-Ro-R9i">
+                                                <rect key="frame" x="0.0" y="0.0" width="153.66666666666666" height="184"/>
+                                            </imageView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="t5v-iW-joe">
+                                                <rect key="frame" x="155.66666666666663" y="0.0" width="153.33333333333337" height="184"/>
+                                                <subviews>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="minimalism" translatesAutoresizingMaskIntoConstraints="NO" id="hb3-94-78L">
+                                                        <rect key="frame" x="0.0" y="0.0" width="153.33333333333334" height="91"/>
+                                                    </imageView>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zHk-7I-fQ2">
+                                                        <rect key="frame" x="0.0" y="93" width="153.33333333333334" height="91"/>
+                                                        <subviews>
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cccc" translatesAutoresizingMaskIntoConstraints="NO" id="aGd-Bv-Nfw">
+                                                                <rect key="frame" x="0.0" y="0.0" width="153.33333333333334" height="91"/>
+                                                            </imageView>
+                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pvl-ru-FZ5">
+                                                                <rect key="frame" x="0.0" y="0.0" width="153.33333333333334" height="91"/>
+                                                                <subviews>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dWv-uX-F87">
+                                                                        <rect key="frame" x="65.000000000000028" y="30" width="23" height="31"/>
+                                                                        <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="22"/>
+                                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                        <nil key="highlightedColor"/>
+                                                                    </label>
+                                                                </subviews>
+                                                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.37745656398747929" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                <constraints>
+                                                                    <constraint firstItem="dWv-uX-F87" firstAttribute="centerX" secondItem="Pvl-ru-FZ5" secondAttribute="centerX" id="CSQ-Bd-1EM"/>
+                                                                    <constraint firstItem="dWv-uX-F87" firstAttribute="centerY" secondItem="Pvl-ru-FZ5" secondAttribute="centerY" id="qPC-pm-PIC"/>
+                                                                </constraints>
+                                                            </view>
+                                                        </subviews>
+                                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="bottom" secondItem="Pvl-ru-FZ5" secondAttribute="bottom" id="Fpl-dD-D08"/>
+                                                            <constraint firstAttribute="bottom" secondItem="aGd-Bv-Nfw" secondAttribute="bottom" id="Gf1-33-HXE"/>
+                                                            <constraint firstAttribute="trailing" secondItem="Pvl-ru-FZ5" secondAttribute="trailing" id="IXw-43-Hj4"/>
+                                                            <constraint firstAttribute="trailing" secondItem="aGd-Bv-Nfw" secondAttribute="trailing" id="MK6-Ga-P1I"/>
+                                                            <constraint firstItem="aGd-Bv-Nfw" firstAttribute="leading" secondItem="zHk-7I-fQ2" secondAttribute="leading" id="af7-WB-pxQ"/>
+                                                            <constraint firstItem="Pvl-ru-FZ5" firstAttribute="top" secondItem="zHk-7I-fQ2" secondAttribute="top" id="gYl-GW-RR3"/>
+                                                            <constraint firstItem="Pvl-ru-FZ5" firstAttribute="leading" secondItem="zHk-7I-fQ2" secondAttribute="leading" id="oSN-Zl-THI"/>
+                                                            <constraint firstItem="aGd-Bv-Nfw" firstAttribute="top" secondItem="zHk-7I-fQ2" secondAttribute="top" id="oZI-yS-x08"/>
+                                                        </constraints>
+                                                    </view>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="184" id="wee-wy-E9U"/>
+                                            <constraint firstAttribute="bottom" secondItem="Vcv-Ro-R9i" secondAttribute="bottom" id="5Rp-Ud-5Dg"/>
+                                            <constraint firstAttribute="height" constant="184" id="65N-LC-48g"/>
                                         </constraints>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="boolean" keyPath="isRounded" value="NO"/>
@@ -85,23 +138,22 @@
                                                 <real key="value" value="16"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WAQ-RH-KcM">
-                                        <rect key="frame" x="0.0" y="199" width="309" height="84"/>
-                                        <string key="text">Thanks to everyone at the first ever Foresome Golf Tournament!! Congrats to the winners Adam Goraieb an…everyone at the first ever Foresome Golf Tournament!! Congrats to the winners Adam Goraieb an…Read More</string>
+                                    </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Thanks to everyone at the first ever Foresome Golf Tournament!! Congrats to the winners Adam Goraieb an…Read More" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WAQ-RH-KcM">
+                                        <rect key="frame" x="0.0" y="199" width="309" height="59"/>
                                         <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="14"/>
                                         <color key="textColor" red="0.13333333333333333" green="0.15686274509803921" blue="0.19215686274509802" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K5r-OC-T1L">
-                                        <rect key="frame" x="0.0" y="298" width="309" height="1"/>
+                                        <rect key="frame" x="0.0" y="273" width="309" height="1"/>
                                         <color key="backgroundColor" red="0.92941176470588238" green="0.92941176470588238" blue="0.92941176470588238" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="1" id="bhN-Ky-HNx"/>
                                         </constraints>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="RLN-pQ-kPE">
-                                        <rect key="frame" x="0.0" y="314" width="309" height="24"/>
+                                        <rect key="frame" x="0.0" y="289" width="309" height="24"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J7t-MT-upl">
                                                 <rect key="frame" x="0.0" y="0.0" width="92.333333333333329" height="24"/>
@@ -190,7 +242,7 @@
                 <outlet property="shareBtn" destination="Tlm-Fr-QJL" id="6La-ZU-b6c"/>
                 <outlet property="userNameLbl" destination="igW-7w-fnr" id="ifm-kc-Ch1"/>
             </connections>
-            <point key="canvasLocation" x="796.18320610687022" y="-9.1549295774647899"/>
+            <point key="canvasLocation" x="-413" y="-67"/>
         </tableViewCell>
     </objects>
     <resources>
@@ -200,6 +252,10 @@
         <image name="ic_liked" width="24" height="24"/>
         <image name="ic_more" width="24" height="24"/>
         <image name="ic_share" width="24" height="24"/>
-        <image name="pex" width="4128" height="3096"/>
+        <image name="minimalism" width="728" height="410"/>
+        <image name="tutorial_screen" width="375" height="812"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
